[gd_scene load_steps=24 format=3 uid="uid://be4o3ythda4cu"]

[ext_resource type="Script" uid="uid://dsowa7f2l478a" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/bonfire_sign.gd" id="1_4621y"]
[ext_resource type="Texture2D" uid="uid://cjpr8ft5kpu7x" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/bonfire_sign.png" id="2_1po6h"]
[ext_resource type="Texture2D" uid="uid://dtn6venpduu67" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_forward_on.png" id="3_kbib7"]
[ext_resource type="Texture2D" uid="uid://cqd8axcl657ss" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_back_up_off.png" id="3_qkb0b"]
[ext_resource type="Texture2D" uid="uid://vjd8kryphqae" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_back_up_on.png" id="4_6s45h"]
[ext_resource type="Texture2D" uid="uid://bjakp6o3lhvcr" path="res://assets/third_party/tiny-swords/Effects/Fire/Fire.png" id="4_gye5d"]
[ext_resource type="PackedScene" uid="uid://dutgnbiy7xalb" path="res://scenes/game_elements/props/interact_area/interact_area.tscn" id="5_1po6h"]
[ext_resource type="Texture2D" uid="uid://dfmt6mviq263q" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_down_off.png" id="5_rd7vt"]
[ext_resource type="Texture2D" uid="uid://vlyx7etlvgj2" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_down_on.png" id="6_ple0u"]
[ext_resource type="Texture2D" uid="uid://bqxlsmjk7ywmg" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_forward_off.png" id="7_pf82u"]
[ext_resource type="Texture2D" uid="uid://bafatj2y18u8b" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_forward_up_off.png" id="9_ypj2g"]
[ext_resource type="Texture2D" uid="uid://c6bnplacvrqku" path="res://scenes/quests/lore_quests/quest_001/1_music_puzzle/components/bonfire_sign/sign_forward_up_on.png" id="10_lgc81"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mtebg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_rd7vt")
}],
"loop": true,
"name": &"back_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ple0u")
}],
"loop": true,
"name": &"back_on",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qkb0b")
}],
"loop": true,
"name": &"back_up_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6s45h")
}],
"loop": true,
"name": &"back_up_on",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_pf82u")
}],
"loop": true,
"name": &"forward_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kbib7")
}],
"loop": true,
"name": &"forward_on",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ypj2g")
}],
"loop": true,
"name": &"forward_up_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_lgc81")
}],
"loop": true,
"name": &"forward_up_on",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1u12m"]
atlas = ExtResource("4_gye5d")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vc6p"]
atlas = ExtResource("4_gye5d")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_te87b"]
atlas = ExtResource("4_gye5d")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2cce"]
atlas = ExtResource("4_gye5d")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wygyr"]
atlas = ExtResource("4_gye5d")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehqd8"]
atlas = ExtResource("4_gye5d")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4kms"]
atlas = ExtResource("4_gye5d")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_p0tgm"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_1u12m")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_7vc6p")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_te87b")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_n2cce")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wygyr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ehqd8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_e4kms")
}],
"loop": true,
"name": &"burning",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qkb0b"]
radius = 7.85715

[sub_resource type="CircleShape2D" id="CircleShape2D_gye5d"]
radius = 34.3657

[node name="BonfireSign" type="StaticBody2D"]
texture_filter = 1
collision_layer = 16
collision_mask = 0
script = ExtResource("1_4621y")

[node name="BaseSprite" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_1po6h")

[node name="SignSprite" type="AnimatedSprite2D" parent="BaseSprite"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_mtebg")
animation = &"forward_off"

[node name="Fire" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -88)
sprite_frames = SubResource("SpriteFrames_p0tgm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = -1.57079
scale = Vector2(1.4, 1)
shape = SubResource("CapsuleShape2D_qkb0b")

[node name="InteractArea" parent="." instance=ExtResource("5_1po6h")]
unique_name_in_owner = true
position = Vector2(-2, 1)
action = "Listen"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_gye5d")

[connection signal="interaction_started" from="InteractArea" to="." method="_on_interact_area_interaction_started"]
